# hyperion

./: .gitignore  Dockerfile  README.md  flake.nix  flake.webkit4.nix  flake.webkit6.nix  releases.html
bobthetiler/: Cargo.toml  Makefile  README.md  cbindgen.toml  layout_tree.h  tiler.go  watch.sh
bobthetiler/src/: ffi.rs  lib.rs  main.rs  tiler.rs
hyperbase/: .gitignore  Cargo.toml  README.md  build.rs  logs  run.sh
hyperbase/qml/: BrowserDialog.qml  BrowserWindow.qml  DownloadView.qml  FindBar.qml  FullScreenNotification.qml  WebAuthDialog.qml  main.qml  qml.qrc
hyperbase/qml/icons/: qml.qrc
hyperbase/src/: cxxqt_object.rs  main.rs  qtwebengine.rs
hypercore/: .gitignore  ApplicationRoot.qml  BrowserWindow.qml  BrowserWindow.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  hyperion.pro  interceptor.cpp  interceptor.h  main.cpp  resources.qrc  run.sh  tabmanager.cpp  tabmanager.h  tabmetadata.h  thieflite.cpp  thieflite.h  tiler.cpp  tiler.h  utils.h  watch.sh
hypercore/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
hypercore/.qt/deploy_qml_imports/: quicknanobrowser.cmake
hypercore/.qt/qml_imports/: quicknanobrowser_build.rsp  quicknanobrowser_conf.cmake  quicknanobrowser_conf.rsp
hypercore/.qt/rcc/: qmake_BrowserUtils.qrc  qrc_qmake_BrowserUtils.cpp  qrc_resources.cpp  qrc_resources1.cpp  resources.qrc  resources1.qrc
hypercore/.rcc/qmllint/: quicknanobrowser.rsp  quicknanobrowser_json.rsp  quicknanobrowser_module.rsp
hypercore/qml/: ApplicationRoot.qml  BrowserDialog.qml  BrowserWindow.qml  ToolButtonGroup.qml  WebView.qml
hyperion/: bun.lockb  package.json
hyperion-mac/: bun.lockb  package.json
hyperion-mac/src-tauri/: Cargo.toml  tauri.conf.json
hyperion-mac/src-tauri/src/: main.rs
hyperion/src-tauri/: Cargo.toml  tauri.conf.json
hyperion/src-tauri/src/: main.rs
maalicious/: .gitignore  Makefile  README.md  extractfeatures.py  modelbuilders.py  phishing_detection.tflite  requirement.txt  setup.sh  train.py  train2.py  verify.py
scripts/: install  list-all
thparty/include/mlmodels/: phishing_detection.tflite
